--- a/Servlets/test-jsoup-1/pom.xml
+++ b/Servlets/test-jsoup-1/pom.xml
@@ -30,6 +30,16 @@
   	<groupId>org.jsoup</groupId>
   	<artifactId>jsoup</artifactId>
   	<version>1.7.3</version>
-	</dependency>
+	</dependency>	
+	 <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+        </dependency>
+        <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>1.9.5</version>
+        </dependency>	
   </dependencies>  
 </project>
