--- a/ORM/pom.xml
+++ b/ORM/pom.xml
@@ -12,11 +12,11 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.35</version>
 	  </dependency>
-	  <dependency>
+	  <!-- <dependency>
 		<groupId>javax.persistence</groupId>
 		<artifactId>persistence-api</artifactId>
-		<version>1.0.2</version>
-	  </dependency>
+		<version>1.0.2</version> 
+	  </dependency>  -->
 	  <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
