--- a/Servlets/servlet-unit-test/pom.xml
+++ b/Servlets/servlet-unit-test/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>hello-world</groupId>
-  <artifactId>hello-world</artifactId>
+  <groupId>servlet-unit-test</groupId>
+  <artifactId>servlet-unit-test</artifactId>
   <version>1</version>
   <packaging>war</packaging>
   <build>
