--- a/Servlets/test-jsoup-1/WebContent/WEB-INF/web.xml
+++ b/Servlets/test-jsoup-1/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <servlet>
         <servlet-name>JSoup</servlet-name>
-        <servlet-class>TestJSoup</servlet-class>
+        <servlet-class>JSoupServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>JSoup</servlet-name>
