--- a/Servlets/test-jsoup-1/pom.xml
+++ b/Servlets/test-jsoup-1/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>test-jsoup-1</groupId>
   <artifactId>test-jsoup-1</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1</version>
   <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -26,6 +26,12 @@
     </plugins>
   </build>
   <dependencies>
+      <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+  
 	<dependency>
   	<groupId>org.jsoup</groupId>
   	<artifactId>jsoup</artifactId>
