--- a/ORM/pom.xml
+++ b/ORM/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>assignment6</groupId>
-  <artifactId>assignment6</artifactId>
+  <groupId>etl</groupId>
+  <artifactId>etl</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>assignment6</name>
+  <name>etl</name>
   
   <dependencies>
   	  <dependency>
