Updated REST-JDBC - Added finalName to pom.xml - Removed an unused method from resource class

--- a/REST-JDBC/pom.xml
+++ b/REST-JDBC/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   
   <build>
+    <finalName>resteasy-jdbc</finalName>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
       <plugin>
