Updates to Hibernate project
- Updated pom.xml to address warning related to missing web.xml
- Added test methods that demonstrate difference between load and get
  methods
- Updated property name in Assignment and UTCourse entity classes

--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -21,11 +21,19 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
-        </dependency>       	  
+        </dependency>
   </dependencies>
   
   <build>
     <plugins>
+	<plugin>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.4</version>
+		<configuration>
+			<warSourceDirectory>WebContent</warSourceDirectory>
+			<failOnMissingWebXml>false</failOnMissingWebXml>
+		</configuration>
+	</plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
