--- a/JavaScript-Example/js-example/pom.xml
+++ b/JavaScript-Example/js-example/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>javax.servlet</groupId>
 	<artifactId>javax.servlet-api</artifactId>
 	<version>3.0.1</version>
-</dependency>
+  </dependency>
   
   <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -39,6 +39,51 @@
   <build>
   <finalName>js-example</finalName>
     <plugins>
+
+ <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+	  <configuration>
+          <path>/</path>
+        </configuration>
+        </plugin>
+
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
+     </plugin>
+
+     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-dependency-plugin</artifactId>
+      <version>2.3</version>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals><goal>copy</goal></goals>
+          <configuration>
+            <artifactItems>
+              <artifactItem>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-runner</artifactId>
+                <version>9.3.3.v20150827</version>
+                <destFileName>jetty-runner.jar</destFileName>
+              </artifactItem>
+            </artifactItems>
+          </configuration>
+        </execution>
+       </executions>
+    </plugin>
+     
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
