--- a/assignment-templates/assignment4/pom.xml
+++ b/assignment-templates/assignment4/pom.xml
@@ -30,6 +30,13 @@
   
   <dependencies>
   
+ <dependency>
+    <groupId>org.jboss.resteasy</groupId>
+    <artifactId>resteasy-jaxb-provider</artifactId>
+    <version>3.1.4.Final</version>
+</dependency>
+ 
+  
   <dependency>
 	<groupId>javax.servlet</groupId>
 	<artifactId>javax.servlet-api</artifactId>
@@ -39,29 +46,19 @@
   <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.0.5.Final</version>
+            <version>3.1.4.Final</version>
   </dependency>
   <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-servlet-initializer</artifactId>
-            <version>3.0.5.Final</version>
+            <version>3.1.4.Final</version>
         </dependency>
     <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>jaxrs-api</artifactId>
-            <version>3.0.5.Final</version>
+            <version>3.0.12.Final</version>
         </dependency>
         
-        <dependency>
-    <groupId>com.sun.xml.bind</groupId>
-    <artifactId>jaxb-core</artifactId>
-    <version>2.2.8-b01</version>
-</dependency>
-<dependency>
-    <groupId>com.sun.xml.bind</groupId>
-    <artifactId>jaxb-impl</artifactId>
-    <version>2.2-promoted-b65</version>
-</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
